# wellington

./: LICENSE  README.md
doc/design/: orders.md  references.md  tiles.md  units.md
src/: Makefile  root_cmake.txt
src/actors/: 20thFoot.xml  95thRifles.xml  CMakeLists.txt  Makefile  ScotsGreys.xml  Wellington.xml  actor.cpp  actor.hpp  actor_component.hpp  actor_factory.cpp  actor_factory.hpp  ai_component.cpp  ai_component.hpp  build_actor_factory.sh  children.cpp  fight_component.cpp  fight_component.hpp  fire_component.cpp  fire_component.hpp  identity_component.cpp  identity_component.hpp  interfaces.h  move_component.cpp  move_component.hpp  order_component.cpp  order_component.hpp  properties.hpp  props.cpp  ptree.xml  reaction_component.cpp  reaction_component.hpp  representation_component.cpp  representation_component.hpp  sprite_component.cpp  sprite_component.hpp  test_actor_factory.cpp  txml
src/cmd/: Makefile  bmain.cpp  command.hpp  dictionary.cpp  (+23 more)
src/main/: CMakeLists.txt  Makefile  battle.cpp  battle.hpp  cmd_model.cpp  cmd_model.hpp  cmd_view.cpp  cmd_view.hpp  command.hpp  file_reader.hpp  json_file_resource.hpp  key.hpp  key_model.cpp  key_model.hpp  key_view.cpp  key_view.hpp  main.cpp  main.cpp.copy  map.hpp  map_controller.cpp  map_controller.hpp  map_key.hpp  map_model.cpp  map_model.hpp  map_view.cpp  map_view.hpp  ncwindow.hpp  properties.hpp  resource.hpp  resource_cache.hpp  stdscr_map_controller.cpp  stdscr_map_controller.hpp  stdscr_model.hpp  stdscr_view.cpp  stdscr_view.hpp  vitoria.battle.json  vitoria.txt  wellington_config.h.in
(+136 files in other folders)
